languagemonster/languagemonster/static/scss/_shared.scss
.align-left {
    text-align: left;
}

.font40px {
    font-size: 40px;
}

.font16px {
    font-size: 16px;
}

.button3d-small {
    -webkit-box-shadow: 0 4px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
    -moz-box-shadow: 0 4px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
    box-shadow: 0 4px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
}

.button3d-large {
    -webkit-box-shadow: 0 10px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
    -moz-box-shadow: 0 10px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
    box-shadow: 0 10px 0 $color-button3d-shadow, 0 15px 20px rgba(0, 0, 0, .35);
}

.button3d {
    display: inline-block;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
    -moz-transition: -moz-box-shadow .1s ease-in-out;
    -o-transition: -o-box-shadow .1s ease-in-out;
    transition: box-shadow .1s ease-in-out;
    color: $color-white;
}

.button3d span.small {
    padding: 10px 15px;
}

.button3d span.large {
    padding: 20px 30px;
}

.button3d span.text {
    color: $color-white;
    display: inline-block;
    background-color: $color-button3d;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
    -moz-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
    font-family: $font-base;
    line-height: 1;
    text-shadow: 0 -1px 1px $color-button3d-text-shadow, 0 0 5px $color-button3d-text-shadow;
    -webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
    -moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
    -o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
    transition: background-color .2s ease-in-out, transform .1s ease-in-out;
}

.button3d:hover span {
    color: $color-white;
    text-shadow: 0 -1px 10px $color-button3d-text-shadow, 0 0 10px $color-button3d-text-shadow;
}

.button3d-large:active, .button3d-large:focus {
    -webkit-box-shadow: 0 10px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
    -moz-box-shadow: 0 10px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
    box-shadow: 0 10px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
}

.button3d-small:active, .button3d-small:focus {
    -webkit-box-shadow: 0 4px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
    -moz-box-shadow: 0 4px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
    box-shadow: 0 4px 0 $color-button3d-shadow, 0 12px 10px rgba(0, 0, 0, .3);
}

.button3d:active, .button3d:focus {
    color: $color-white;
}

.button3d:active span {
    color: $color-white;
    -webkit-transform: translate(0, 5px);
    -moz-transform: translate(0, 5px);
    -o-transform: translate(0, 5px);
    transform: translate(0, 5px);
}

// Flags

.au_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -27px;}
.au_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -2px;}
.au_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -82px -227px;}
.au_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -47px;}
.ca_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -177px;}
.ca_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -127px;}
.ca_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -117px -212px;}
.ca_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -47px -182px;}
.de_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -2px;}
.de_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -52px;}
.de_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -82px -262px;}
.de_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -137px;}
.es_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -152px;}
.es_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -117px -272px;}
.es_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -142px;}
.es_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -47px -2px;}
.fr_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -77px;}
.fr_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -117px -247px;}
.fr_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -177px;}
.fr_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -2px;}
.it_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -142px -272px;}
.it_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -77px;}
.it_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -107px;}
.it_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -227px;}
.nz_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -127px;}
.nz_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -152px;}
.nz_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -37px;}
.nz_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -47px -47px;}
.pl_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -52px;}
.pl_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -2px -272px;}
.pl_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -2px;}
.pl_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -92px;}
.pt_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -202px;}
.pt_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -27px;}
.pt_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -47px -262px;}
.pt_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -47px -137px;}
.uk_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -142px -247px;}
.uk_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -177px;}
.uk_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -92px -72px;}
.uk_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -47px -92px;}
.us_20px {width: 20px; height: 20px; background: url(../../images/flags.png) -152px -102px;}
.us_24px {width: 24px; height: 24px; background: url(../../images/flags.png) -127px -102px;}
.us_30px {width: 30px; height: 30px; background: url(../../images/flags.png) -47px -227px;}
.us_40px {width: 40px; height: 40px; background: url(../../images/flags.png) -2px -182px;}

